--- a/public/assets/css/components/style.default.css
+++ b/public/assets/css/components/style.default.css
@@ -1781,7 +1781,7 @@ a.filter-term {
 
 
 .hideOnLoad {
-    display: none;
+    display: none !important;
 }
 
 .formLink {
